Fixed an issue where the ruleset would not change when loading a new levelset. Fixed an issue where the tileset would not change when loading a levelset with a different ruleset.